--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "handlebars": "4.7.7",
+    "pg-promise": "^11.14.0",
     "puppeteer": "22.15.0",
     "qrcode": "^1.5.4",
     "uuid": "^11.1.0",
@@ -36,6 +38,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.5.9",
+    "@types/pg-promise": "^0.0.28",
     "@types/qrcode": "^1.5.5",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.8",
